<resources>
    <string name="app_name">Orgs</string>
    <string name="title_activity_formulario_produto">FormularioProdutoActivity</string>
    <string name="item_image">Item image</string>
    <string name="add_item">Adicionar item</string>
    <string name="nome">Nome</string>
    <string name="descricao">Descrição</string>
    <string name="valor">Valor</string>
    <string name="salvar">Salvar</string>
    <string name="carregar">Carregar</string>
    <string name="url_da_imagem">URL da imagem</string>
    <string name="imagem_do_produto">Imagem do produto</string>
    <string name="imagem_padrao_do_produto">Imagem padrao do produto</string>
    <string name="ordenar">Ordenar</string>
    <string name="nome_desc">Nome desc</string>
    <string name="nome_asc">Nome asc</string>
    <string name="descricao_desc">Descrição desc</string>
    <string name="descricao_asc">Descrição asc</string>
    <string name="valor_desc">Valor desc</string>
    <string name="valor_asc">Valor asc</string>
    <string name="sem_ordenacao">Sem ordenação</string>
    <string name="editar">Editar</string>
    <string name="remover">Remover</string>
    <string name="usuario">Usuário</string>
    <string name="nome_usuario">Nome</string>
    <string name="senha">Senha</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="orgs">Orgs</string>
    <string name="app_logo">App Logo</string>
    <string name="entrar">Entrar</string>
    <string name="cadastrar_usuario">cadastrar usuário</string>
    <string name="logout">Logout</string>
    <string name="perfil">Perfil</string>
    <string name="todos_os_produtos">Todos os produtos</string>
    <string name="lista_produtos">Lista produtos</string>
</resources>