<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_ordena_lista_filtrar"
        android:icon="@drawable/ic_action_filter"
        android:title="@string/ordenar"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/menu_ordena_lista_filtrar_nome_desc"
                android:title="@string/nome_desc" />

            <item
                android:id="@+id/menu_ordena_lista_filtrar_nome_asc"
                android:title="@string/nome_asc" />

            <item
                android:id="@+id/menu_ordena_lista_filtrar_descricao_desc"
                android:title="@string/descricao_desc" />

            <item
                android:id="@+id/menu_ordena_lista_filtrar_descricao_asc"
                android:title="@string/descricao_asc" />

            <item
                android:id="@+id/menu_ordena_lista_filtrar_valor_desc"
                android:title="@string/valor_desc" />

            <item
                android:id="@+id/menu_ordena_lista_filtrar_valor_asc"
                android:title="@string/valor_asc" />

            <item
                android:id="@+id/menu_ordena_lista_filtrar_sem_ordenacao"
                android:title="@string/sem_ordenacao" />
        </menu>
    </item>
    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_action_logout"
        android:title="@string/logout"
        app:showAsAction="ifRoom" />
</menu>